Fix T56692: The edges are not highlighted in Mark Freestyle Edge

This was not ported yet.