source/blender/draw/modes/shaders/edit_mesh_overlay_common_lib.glsl
@@ -3,6 +3,7 @@
 #define EDGE_SELECTED   (1 << 2)
 #define EDGE_SEAM       (1 << 3)
 #define EDGE_SHARP      (1 << 4)
+#define EDGE_FREESTYLE  (1 << 5)
 #define EDGE_VERTEX_ACTIVE   (1 << (0 + 8))
 #define EDGE_VERTEX_SELECTED (1 << (1 + 8))
 
@@ -13,13 +14,13 @@
 vec4 EDIT_MESH_edge_color_outer(int edge_flag, bool face_active, float crease, float bweight)
 {
 	vec4 color = vec4(0.0);
+	color = ((edge_flag & EDGE_FREESTYLE) != 0) ? colorEdgeFreestyle : color;
 	color = ((edge_flag & EDGE_SHARP) != 0) ? colorEdgeSharp : color;
 	color = (crease > 0.0) ? vec4(colorEdgeCrease.rgb, crease) : color;
 	color = (bweight > 0.0) ? vec4(colorEdgeBWeight.rgb, bweight) : color;
 	color = ((edge_flag & EDGE_SEAM) != 0) ? colorEdgeSeam : color;
 
-	if (face_active)
-	{
+	if (face_active) {
 		color = colorEditMeshActive;
 	}
 	return color;
@@ -41,8 +42,7 @@ vec4 EDIT_MESH_edge_color_inner(int edge_flag, bool face_active)
 
 vec4 EDIT_MESH_vertex_color(int vertex_flag)
 {
-	if ((vertex_flag & (VERTEX_ACTIVE | VERTEX_SELECTED)) != 0)
-	{
+	if ((vertex_flag & (VERTEX_ACTIVE | VERTEX_SELECTED)) != 0) {
 		return colorEdgeSelect;
 	}
 	else {
